syntax = "proto3";

package computation_renders;

import "geometry/geometry.proto";

service ComputationRenders {
    rpc Render (ComputationRenderRequest) returns (ComputationRenderResponse) {}
}

message ComputationRenderRequest {
    string operator_id = 1;
    double time = 2;
    geometry.BoundingBox2D bounding_box = 3;
}

message ComputationRenderResponse {
    string resource_id = 1;
}
